--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "test/stubs"]
-	path = test/stubs
+[submodule "tests/stubs"]
+	path = tests/stubs
 	url = https://github.com/symcon/SymconStubs
 [submodule ".style"]
 	path = .style
