--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,5 +17,5 @@ jobs:
       run: wget https://phar.phpunit.de/phpunit.phar
 
     - name: Run Tests
-      run: phpdbg -qrr phpunit.phar tests --configuration tests/phpunit.xml --coverage-text
+      run: phpdbg -qrr phpunit.phar tests --configuration tests/phpunit.xml
       
