--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,12 @@ jobs:
         key: "php8.0-composer-highest-${{ hashFiles('**/composer.json') }}"
         restore-keys: "php8.0-composer-highest-"
 
+    - name: "Set COMPOSER_ROOT_VERSION environment variable"
+      uses: "docker://ergebnis/composer-root-version-action:0.1.3"
+
+    - name: "Install highest dependencies with composer"
+      run: "./tools/composer update --no-ansi --no-interaction --no-progress --no-suggest"
+
     - name: "Run tests with phpunit/phpunit"
       run: "vendor/bin/phpunit --coverage-clover=coverage.xml"
       
