--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,25 +13,9 @@ jobs:
       with:
           submodules: true
 
-    - name: "Install PHP with extensions"
-      uses: "shivammathur/setup-php@v1"
-      with:
-        php-version: "8.0"
-        coverage: "pcov"
+    - name: Install latest PHPUnit
+      run: wget https://phar.phpunit.de/phpunit.phar
 
-    - name: "Cache dependencies installed with composer"
-      uses: "actions/cache@v1"
-      with:
-        path: "~/.composer/cache"
-        key: "php8.0-composer-highest-${{ hashFiles('**/composer.json') }}"
-        restore-keys: "php8.0-composer-highest-"
-
-    - name: "Set COMPOSER_ROOT_VERSION environment variable"
-      uses: "docker://ergebnis/composer-root-version-action:0.1.3"
-
-    - name: "Install highest dependencies with composer"
-      run: "./tools/composer update --no-ansi --no-interaction --no-progress --no-suggest"
-
-    - name: "Run tests with phpunit/phpunit"
-      run: "vendor/bin/phpunit --coverage-clover=coverage.xml"
+    - name: Run Tests
+      run: phpdbg -qrr phpunit.phar tests --configuration tests/phpunit.xml
       
