--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -15,8 +15,8 @@ jobs:
       run: git submodule update --init -- .style
 
     - name: Install latest PHP-CS-Fixer
-      run: wget https://cs.symfony.com/download/php-cs-fixer-v3.phar
+      run: wget https://cs.symfony.com/download/php-cs-fixer-v2.phar
 
     - name: Run Checks
-      run: php php-cs-fixer-v3.phar fix --config=.style/.php_cs -v --dry-run --allow-risky=yes .
+      run: PHP_CS_FIXER_IGNORE_ENV=1 php php-cs-fixer-v3.phar fix --config=.style/.php_cs -v --dry-run --allow-risky=yes .
       
