--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -18,5 +18,5 @@ jobs:
       run: wget https://cs.symfony.com/download/php-cs-fixer-v2.phar
 
     - name: Run Checks
-      run: PHP_CS_FIXER_IGNORE_ENV=1 php php-cs-fixer-v2.phar fix --config=.style/.php_cs -v --dry-run --allow-risky=yes .
+      run: php php-cs-fixer-v2.phar fix --config=.style/.php_cs -v --dry-run --allow-risky=yes .
       
