--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,7 +1,5 @@
 name: Check Style
-uses: shivammathur/setup-php@v2
-with:
-  php-version: '7.4'
+
 
 on: [push, pull_request]
 
@@ -12,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
  
     steps:
+    uses: shivammathur/setup-php@v2
+    with: php-version: '7.4'
     - uses: actions/checkout@v1
 
     - name: Only fetch Style PHP submodule
