--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: shivammathur/setup-php@v2
       with: 
          php-version: '7.4'
-         
+
     - uses: actions/checkout@v1
 
     - name: Only fetch Style PHP submodule
@@ -23,5 +23,5 @@ jobs:
       run: wget https://cs.symfony.com/download/php-cs-fixer-v2.phar
 
     - name: Run Checks
-      run: PHP_CS_FIXER_IGNORE_ENV=1 php php-cs-fixer-v2.phar fix --config=.style/.php_cs -v --dry-run --diff --allow-risky=yes .
+      run: php php-cs-fixer-v2.phar fix --config=.style/.php_cs -v --dry-run --diff --allow-risky=yes .
       
