--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,5 +17,5 @@ jobs:
       run: wget https://phar.phpunit.de/phpunit-10.5.20.phar
 
     - name: Run Tests
-      run: phpdbg -qrr phpunit.phar tests/SonosTest.php --configuration tests/phpunit.xml
+      run: phpdbg -qrr phpunit-10.5.20.phar tests/SonosTest.php --configuration tests/phpunit.xml
       
